k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ski-station-ingress
  namespace: ski-station
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ski-station-frontend-service
                port:
                  number: 8089
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ski-station-api-service
                port:
                  number: 8089
